--- a/1__프로젝트_개요.html
+++ b/1__프로젝트_개요.html
@@ -166,7 +166,7 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u22" class="ax_default table_cell">
-          <img id="u22_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u22_img" class="img " src="images/1__프로젝트_개요/u22.png"/>
           <div id="u22_text" class="text ">
             <p><span>2018.05.31</span></p>
           </div>
@@ -174,15 +174,15 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u23" class="ax_default table_cell">
-          <img id="u23_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u23_img" class="img " src="images/1__프로젝트_개요/u22.png"/>
           <div id="u23_text" class="text ">
-            <p><span>0.1</span></p>
+            <p><span>0.2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u24" class="ax_default table_cell">
-          <img id="u24_img" class="img " src="images/1__프로젝트_개요/u21.png"/>
+          <img id="u24_img" class="img " src="images/1__프로젝트_개요/u24.png"/>
           <div id="u24_text" class="text ">
             <p><span>김민진</span></p>
           </div>
@@ -191,16 +191,25 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u25" class="ax_default table_cell">
           <img id="u25_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u25_text" class="text ">
+            <p><span>2018.06.01</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u26" class="ax_default table_cell">
           <img id="u26_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u26_text" class="text ">
+            <p><span>0.3</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u27" class="ax_default table_cell">
           <img id="u27_img" class="img " src="images/1__프로젝트_개요/u21.png"/>
+          <div id="u27_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -271,12 +280,15 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u39" class="ax_default table_cell">
-          <img id="u39_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <img id="u39_img" class="img " src="images/1__프로젝트_개요/u39.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u40" class="ax_default table_cell">
-          <img id="u40_img" class="img " src="images/1__프로젝트_개요/u38.png"/>
+          <img id="u40_img" class="img " src="images/1__프로젝트_개요/u40.png"/>
+          <div id="u40_text" class="text ">
+            <p><span>- 순차진행으로 범위 구분 추가</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -287,6 +299,9 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u42" class="ax_default table_cell">
           <img id="u42_img" class="img " src="images/1__프로젝트_개요/u38.png"/>
+          <div id="u42_text" class="text ">
+            <p><span>-PPS 상품도 듣기 잔여곡수 추가</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -412,61 +427,97 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u60" class="ax_default table_cell">
           <img id="u60_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u60_text" class="text ">
+            <p><span>2018.05.31</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u61" class="ax_default table_cell">
           <img id="u61_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u61_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u62" class="ax_default table_cell">
           <img id="u62_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u62_text" class="text ">
+            <p><span>올리브네트웍스</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u63" class="ax_default table_cell">
           <img id="u63_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u63_text" class="text ">
+            <p><span>박지욱, 장유리</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u64" class="ax_default table_cell">
           <img id="u64_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u64_text" class="text ">
+            <p><span>리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u65" class="ax_default table_cell">
           <img id="u65_img" class="img " src="images/1__프로젝트_개요/u59.png"/>
+          <div id="u65_text" class="text ">
+            <p><span>기획리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u66" class="ax_default table_cell">
           <img id="u66_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u66_text" class="text ">
+            <p><span>2018.06.01</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u67" class="ax_default table_cell">
           <img id="u67_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u67_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u68" class="ax_default table_cell">
           <img id="u68_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u68_text" class="text ">
+            <p><span>올리브네트웍스</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u69" class="ax_default table_cell">
           <img id="u69_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u69_text" class="text ">
+            <p><span>장유리</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u70" class="ax_default table_cell">
           <img id="u70_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u70_text" class="text ">
+            <p><span>리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u71" class="ax_default table_cell">
           <img id="u71_img" class="img " src="images/1__프로젝트_개요/u59.png"/>
+          <div id="u71_text" class="text ">
+            <p><span>기획리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -572,6 +623,39 @@
           <p><span>자료 공유 이력</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u92" class="ax_default flow_shape">
+        <div id="u92_div" class=""></div>
+        <div id="u92_text" class="text ">
+          <p><span>이용권내역</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u92_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u93" class="ax_default flow_shape">
+        <div id="u93_div" class=""></div>
+        <div id="u93_text" class="text ">
+          <p><span>M머니/CJ ONE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u93_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u94" class="ax_default flow_shape">
+        <div id="u94_div" class=""></div>
+        <div id="u94_text" class="text ">
+          <p><span>이용권내역</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u94_ref" class="reference_page"></div>
     </div>
   </body>
 </html>
