--- a/다운로드_상품__잔여곡수_추가_.html
+++ b/다운로드_상품__잔여곡수_추가_.html
@@ -25,56 +25,28 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u168" class="ax_default box_1">
-        <div id="u168_div" class=""></div>
-        <div id="u168_text" class="text ">
-          <p><span>CASE : 다운로드 상품 이용시, 사용중인 이용권의 다운로드 잔여횟수 추가 노출</span></p>
-        </div>
+      <div id="u171" class="ax_default box_1">
+        <div id="u171_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u169" class="ax_default box_1">
-        <div id="u169_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u170" class="ax_default box_1">
-        <div id="u170_div" class=""></div>
-        <div id="u170_text" class="text ">
+      <div id="u172" class="ax_default box_1">
+        <div id="u172_div" class=""></div>
+        <div id="u172_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- 다운로드건수-사용중인 이용권 (Dynamic Panel) -->
-      <div id="u171" class="ax_default" data-label="다운로드건수-사용중인 이용권">
-        <div id="u171_state0" class="panel_state" data-label="스마트폰" style="">
-          <div id="u171_state0_content" class="panel_state_content">
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u172" class="ax_default heading_1">
-              <div id="u172_div" class=""></div>
-              <div id="u172_text" class="text ">
-                <p><span>듣기 + 스마트폰 00곡 저장</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u173" class="ax_default heading_1">
-              <div id="u173_div" class=""></div>
-              <div id="u173_text" class="text ">
-                <p><span>이용기간</span></p><p><span>듣기 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수 </span></p><p><span>스마트폰 저장 : 30곡</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="u171_state1" class="panel_state" data-label="mp3" style="visibility: hidden;">
-          <div id="u171_state1_content" class="panel_state_content">
+      <div id="u173" class="ax_default" data-label="다운로드건수-사용중인 이용권">
+        <div id="u173_state0" class="panel_state" data-label="스마트폰" style="">
+          <div id="u173_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
             <div id="u174" class="ax_default heading_1">
               <div id="u174_div" class=""></div>
               <div id="u174_text" class="text ">
-                <p><span>[개월]MP3 100</span></p>
+                <p><span>듣기 + 스마트폰 00곡 저장</span></p>
               </div>
             </div>
 
@@ -82,6 +54,26 @@
             <div id="u175" class="ax_default heading_1">
               <div id="u175_div" class=""></div>
               <div id="u175_text" class="text ">
+                <p><span>이용기간</span></p><p><span>듣기 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수 </span></p><p><span>스마트폰 저장 : 30곡</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u173_state1" class="panel_state" data-label="mp3" style="visibility: hidden;">
+          <div id="u173_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u176" class="ax_default heading_1">
+              <div id="u176_div" class=""></div>
+              <div id="u176_text" class="text ">
+                <p><span>[개월]MP3 100</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u177" class="ax_default heading_1">
+              <div id="u177_div" class=""></div>
+              <div id="u177_text" class="text ">
                 <p><span>이용기간</span></p><p><span>MP3 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수</span></p><p><span>MP3 저장 : 30곡</span></p>
               </div>
             </div>
@@ -90,96 +82,104 @@
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u176" class="ax_default line">
-        <img id="u176_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u176.png"/>
+      <div id="u178" class="ax_default line">
+        <img id="u178_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u178.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u177" class="ax_default line">
-        <img id="u177_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u177.png"/>
+      <div id="u179" class="ax_default line">
+        <img id="u179_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u178" class="ax_default heading_1">
-        <div id="u178_div" class=""></div>
-        <div id="u178_text" class="text ">
+      <div id="u180" class="ax_default heading_1">
+        <div id="u180_div" class=""></div>
+        <div id="u180_text" class="text ">
           <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u179" class="ax_default box_1">
-        <img id="u179_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u179.png"/>
-        <div id="u179_text" class="text ">
+      <div id="u181" class="ax_default box_1">
+        <img id="u181_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u181.png"/>
+        <div id="u181_text" class="text ">
           <p><span>사용중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u180" class="ax_default line">
-        <img id="u180_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u176.png"/>
+      <div id="u182" class="ax_default line">
+        <img id="u182_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u178.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u181" class="ax_default box_1">
-        <img id="u181_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u179.png"/>
-        <div id="u181_text" class="text ">
+      <div id="u183" class="ax_default box_1">
+        <img id="u183_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u181.png"/>
+        <div id="u183_text" class="text ">
           <p><span>보관중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u182" class="ax_default heading_1">
-        <div id="u182_div" class=""></div>
-        <div id="u182_text" class="text ">
+      <div id="u184" class="ax_default heading_1">
+        <div id="u184_div" class=""></div>
+        <div id="u184_text" class="text ">
           <p><span>보관중인 이용권이 없습니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u183" class="ax_default box_1">
-        <div id="u183_div" class=""></div>
-        <div id="u183_text" class="text ">
+      <div id="u185" class="ax_default box_1">
+        <div id="u185_div" class=""></div>
+        <div id="u185_text" class="text ">
           <p><span>이용권구매</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u184" class="ax_default box_1">
-        <div id="u184_div" class=""></div>
-        <div id="u184_text" class="text ">
+      <div id="u186" class="ax_default box_1">
+        <div id="u186_div" class=""></div>
+        <div id="u186_text" class="text ">
           <p><span>쿠폰 등록하기</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Ellipse) -->
-      <div id="u185" class="ax_default ellipse">
-        <img id="u185_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u185.png"/>
-        <div id="u185_text" class="text ">
+      <div id="u187" class="ax_default ellipse">
+        <img id="u187_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u187.png"/>
+        <div id="u187_text" class="text ">
           <p><span>X</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u186" class="ax_default paragraph">
-        <div id="u186_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u187" class="ax_default box_1">
-        <div id="u187_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u188" class="ax_default box_1">
+      <div id="u188" class="ax_default paragraph">
         <div id="u188_div" class=""></div>
-        <div id="u188_text" class="text ">
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u189" class="ax_default box_1">
+        <div id="u189_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u190" class="ax_default box_1">
+        <div id="u190_div" class=""></div>
+        <div id="u190_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u188_ann" class="annotation"></div>
+      <div id="u190_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u191" class="ax_default box_1">
+        <div id="u191_div" class=""></div>
+        <div id="u191_text" class="text ">
+          <p><span>CASE : 횟수 제한이 있는 다운로드 &amp; PPS 상품 이용시, 잔여 곡 수 항목 추가 노출</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
